# poly

./: .clang-format  .clang-tidy  .cmakelintrc  .gitignore  .gitleaks.toml  .mailmap  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SEED-MEMORIES.md  nfr-review.yaml
.github/: docs-drift-map.yml  lsan.supp  pull_request_template.md  tsan.supp  ubsan.supp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  deploy-site.yml  nfr-review-nightly.yml  nfr-review.yml  pr-af-review.yml  sanitizers.yml
.gsd/: CODEBASE.md  KNOWLEDGE.md  event-log.jsonl  last-snapshot.md  notifications.jsonl  state-manifest.json
.gsd/audit/: events.jsonl
.gsd/graphs/: graph.json
cmake/: jk_embed_assets.cmake  jk_ui_test_harness.cmake  jk_warnings.cmake
docs/: M002-UAT-SCRIPT.md  PRD.md  automation-mapping.md  cubase-workflow.md  engine-spec.md  euclidean-rhythm-guide.md  groove-spec-design.md  midi-note-mapping.md  pr-af-review.md  preset-taxonomy.md  roadmap.md  sample-sourcing.md  testing-strategy.md  ui-guide.md  webui-migration.md
docs/review/: architecture-decisions.md  test-coverage.md
docs/reviews/: 2026-07-16-findings-fixed.md  2026-07-16-product-review.md
engine/: CMakeLists.txt
engine/include/poly/: bridge.h  constraint.h  engine.h  envelope.h  euclidean.h  macro.h  midi_capture.h  params_def.h  presets.h  rng.h  sanitize.h  scene.h  smf_writer.h  state_io.h  state_io_envelope.h  state_io_read_lane.h  state_io_write_lane.h  types.h  wasm_api.h
engine/src/: bridge.cpp  constraint.cpp  engine.cpp  envelope.cpp  euclidean.cpp  macro.cpp  midi_capture.cpp  presets.cpp  sanitize.cpp  scene.cpp  smf_writer.cpp  wasm_api.cpp
engine/tools/: CMakeLists.txt  emit_params.cpp  emit_presets.cpp
internal-docs/: UAT-SCRIPT.md  wireframes.md
internal-docs/review/: api-audit.md  retrospective.md
plugin/: CMakeLists.txt
plugin/resource/: poly.uidesc
plugin/source/: controller.cpp  controller.h  controller_base.cpp  controller_base.h  factory.cpp  plugids.h  processor.cpp  processor.h  transport_frame_exchange.h  ui_snapshot.h
plugin/source/ui/: cell_editor_view.cpp  cell_editor_view.h  chain_popover_view.cpp  chain_popover_view.h  cross_rhythm_view.cpp  cross_rhythm_view.h  envelope_curve_view.cpp  envelope_curve_view.h  export_controls_view.cpp  export_controls_view.h  header_view.cpp  header_view.h  lane_edit_view.cpp  lane_edit_view.h  lane_grid_view.cpp  lane_grid_view.h  micro_timing_editor_view.cpp  micro_timing_editor_view.h  note_map_view.cpp  note_map_view.h  phase_alignment_view.cpp  phase_alignment_view.h  phrase_edit_view.cpp  phrase_edit_view.h  scene_bar_view.cpp  scene_bar_view.h  timeline_step_editor_view.cpp  timeline_step_editor_view.h  velocity_view.cpp  velocity_view.h
plugin/source/webui/: bridge_params.h  bridge_serialization.cpp  bridge_serialization.h  web_ui_view.cpp  web_ui_view.h
scripts/: build-wasm.sh  build.sh  check-behavioral-claims.mjs  check-bridge-schema-coverage.mjs  check-count-drift.sh  check-doc-drift.sh  check-doc-taxonomy.sh  check-file-line-refs.mjs  check-generated-docs.sh  check-pragma-once.sh  check-realtime-safety.sh  check-sample-manifest.sh  check-site-assets.sh  check-snippet-regions.sh  check-status-prose.mjs  check-wasm-freshness.sh  fetch-samples.sh  gen-release-notes.mjs  generate-bridge-schema-doc.mjs  generate-euclidean-appendix.mjs  generate-param-docs.mjs  install-pluginval.sh  pre-push-check.sh  site-verify-local.sh  site-verify-remote.sh
scripts/lib/: ensure-emsdk.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.ts
site/public/: CNAME
site/scripts/: generate-counts-json.mjs  generate-params-json.mjs  generate-presets-json.mjs
site/src/: content.config.ts
site/tests/: appendix-euclidean-claims.test.mjs  dump-mode.test.mjs  euclidean-claims.test.mjs  midi-scheduler.test.mjs  preset-patterns.test.mjs  presets-json-schema.test.mjs  prose-pattern-claims.test.mjs  (+2 more)
site/tests-e2e/: audio-probe.mjs  canonical-metadata.spec.ts  console-error-gate.spec.ts  control-audit.spec.ts  dump-mode.spec.ts  equivalence.spec.ts  first-bar-parity.spec.ts  lane-mute.spec.ts  m047-live-probe.spec.ts  macro-diff.spec.ts  modal-chain-flow.spec.ts  modal-morph-flow.spec.ts  modal-mutation-display.spec.ts  modal-preset-categories.spec.ts  preset-consistency.spec.ts  reich-play.spec.ts  reich-probe.mjs  sample-equivalence.spec.ts  site-audio-gate.spec.ts  t03-probe.mjs  t04-alias-audit.mjs  tempo-probe.mjs  try-it-probe.mjs  webui-timeline-toggle.spec.ts
tests/: CMakeLists.txt  bridge_contract_tests.cpp  constraint_tests.cpp  dynamic_shaping_tests.cpp  emission_tests.cpp  envelope_tests.cpp  euclidean_tests.cpp  fixed_pattern_wrap_tests.cpp  golden_tests.cpp  groovestate_copy_benchmark.cpp  macro_tests.cpp  midi_capture_tests.cpp  params_def_tests.cpp  plugin_tests.cpp  preset_tests.cpp  sanitize_tests.cpp  scene_tests.cpp  smf_writer_tests.cpp  state_io_header_hygiene_tests.cpp  swing_humanize_tests.cpp  wasm_api_envelope_gap_slot_tests.cpp  write_envelope_body_version_tests.cpp
tests/fuzz/: fuzz_state_io.cpp
tests/golden/: default_patch_4bars.txt  processor_default_4bars.txt
tests/host/: host_tests.cpp  poly_test_host.cpp  poly_test_host.h  probe_tests.cpp
tests/ui/interaction/: headless_ui_host.cpp  headless_ui_host.h  interaction_smoke_tests.cpp
tests/ui/visual/: image_compare.cpp  image_compare.h  visual_smoke_tests.cpp  visual_test_harness.cpp  visual_test_harness.h
tools/midi_probe/: CMakeLists.txt
tools/midi_probe/source/: probe_factory.cpp  probe_ids.h  probe_processor.cpp  probe_processor.h
webui/: README.md  bridge-schema.md  bridge.schema.json  dump-mode.js  groove-math.js  host-iface.js  index.html  mock-host.js  package-lock.json  package.json  playwright.config.mjs  plugin-host.js  poly_engine.js  poly_engine.wasm  smf-writer.js  ui.css  ui.js  wasm-host.js  wasm-test.html
(+600 files in other folders)
